<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>tim.prune</groupId>
	<artifactId>gpsprune</artifactId>
	<version>19.3-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>tim.prune.gpsprune</name>
	<url>https://github.com/activityworkshop/GpsPrune</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<app.mainClass>tim.prune.GpsPrune</app.mainClass>
		<java3d.version>1.5.1</java3d.version>
	</properties>
	<repositories>
		<repository>
			<id>TUDelft</id>
			<url>http://simulation.tudelft.nl/maven/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>java3d</groupId>
			<artifactId>j3d-core</artifactId>
			<version>${java3d.version}</version>
		</dependency>
		<dependency>
			<groupId>java3d</groupId>
			<artifactId>vecmath</artifactId>
			<version>${java3d.version}</version>
		</dependency>
		<dependency>
			<groupId>java3d</groupId>
			<artifactId>j3d-core-utils</artifactId>
			<version>${java3d.version}</version>
		</dependency>
	</dependencies>

	<build>
		<outputDirectory>${project.build.directory}/classes</outputDirectory>
		<finalName>${project.artifactId}_${project.version}</finalName>
		<sourceDirectory>${project.basedir}/</sourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/</directory>
				<includes>
					<include>tim/prune/gui/images/*</include>
					<include>tim/prune/lang/*</include>
					<include>tim/prune/function/srtm/srtmtiles.dat</include>
					<include>tim/prune/*.txt</include>
				</includes>
			</resource>
		</resources>

		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
				defaults (may be moved to parent pom) -->
			<plugins>
				<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
					<configuration>
						<archive>
							<manifest>
								<mainClass>${app.mainClass}</mainClass>
							</manifest>
						</archive>
					</configuration>

				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
				<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.10</version>
					<configuration>
						<downloadSources>true</downloadSources>
						<downloadJavadocs>true</downloadJavadocs>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
					<configuration>
						<mainClass>${app.mainClass}</mainClass>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

</project>
